<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:adjustViewBounds="true"
            android:background="@color/blue"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ic_arrow_back_yellow"
            android:tint="@color/white"
            android:adjustViewBounds="true"
            android:visibility="visible" />

        <customfonts.TextViewSFProDisplayMedium
            android:id="@+id/rideCar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:text="@string/title_activity_add_detail_send"
            android:textAllCaps="true"
            android:textColor="@color/material_light_white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/send_item_description"
                android:textAllCaps="true"
                android:textSize="17dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corners_edittext_dark"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@mipmap/pro_paket" />

                <customfonts.EditTextSFProDisplayRegular
                    android:id="@+id/mSend_goods_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/send_description"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_corners_edittext_dark"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />
            </LinearLayout>

            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/sender"
                android:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corners_edittext_dark"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ic_contact_person"
                    android:backgroundTint="@color/colorPrimary" />

                <customfonts.EditTextSFProDisplayRegular
                    android:id="@+id/mSend_sender_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_edittext_dark"
                    android:hint="@string/send_sender_name"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corners_edittext_dark"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ic_phone"
                    android:backgroundTint="@color/black" />

                <customfonts.EditTextSFProDisplayRegular
                    android:id="@+id/mSend_sender_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_edittext_dark"
                    android:layout_marginTop="10dp"
                    android:hint="@string/send_sender_phone"
                    android:inputType="phone"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />
            </LinearLayout>

            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/receiver"
                android:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corners_edittext_dark"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ic_contact_person" />

                <customfonts.EditTextSFProDisplayRegular
                    android:id="@+id/mSend_receiver_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/send_receiver_name"
                    android:inputType="text"
                    android:background="@drawable/rounded_corners_edittext_dark"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corners_edittext_dark"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ic_phone"
                    android:backgroundTint="@color/black" />

                <customfonts.EditTextSFProDisplayRegular
                    android:id="@+id/mSend_receiver_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/send_receiver_phone"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_corners_edittext_dark"
                    android:inputType="phone"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mSend_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blueSoft"
                    android:clickable="true"
                    android:padding="8dp">

                    <customfonts.TextViewSFProDisplayRegular
                        android:id="@+id/mSend_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/ride_price"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                    <customfonts.TextViewSFProDisplayMedium
                        android:id="@+id/mSend_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/ride_cost"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <RadioGroup
                        android:id="@+id/mSend_paymentGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/material_light_white"
                        android:orientation="vertical">

                        <customfonts.RadioButton_SF_Pro_Display_Medium
                            android:id="@+id/mSend_mPayPayment"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/text_mPay"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:theme="@style/PaymentButton" />


                        <customfonts.RadioButton_SF_Pro_Display_Medium
                            android:id="@+id/mSend_cashPayment"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:checked="true"
                            android:text="@string/text_cash"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:theme="@style/PaymentButton" />

                    </RadioGroup>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="50dp">

                        <customfonts.TextViewSFProDisplayRegular
                            android:id="@+id/mSend_mPayBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="108dp"
                            android:text="@string/text_updating"
                            android:textColor="@color/material_blue_grey_700"
                            android:textSize="14sp" />

                        <customfonts.Button_SF_Pro_Display_Medium
                            android:id="@+id/mSend_topUp"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="@string/text_topUp"
                            android:textColor="@color/material_blue_grey_700" />

                        <customfonts.TextViewSFProDisplayRegular
                            android:id="@+id/discountText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/mSend_mPayBalance"
                            android:layout_marginLeft="30dp"
                            android:layout_marginStart="30dp"
                            android:text="@string/ride_discount"
                            android:textColor="@color/material_blue_grey_700"
                            android:textSize="12sp" />

                    </RelativeLayout>

                </FrameLayout>

                <customfonts.Button_SF_Pro_Display_Medium
                    android:id="@+id/mSend_order"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimarySoft"
                    android:text="@string/text_order"
                    android:textColor="@color/material_light_white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>