<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginscreen"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/rect_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip">

                <EditText
                    android:id="@+id/no_id"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="+62"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_alignBottom="@+id/phone"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/phone" />

                <customfonts.TextViewSFProDisplayMedium
                    android:textSize="13.0sp"
                    android:textColor="@color/black"
                    android:padding="12.0sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:layout_toRightOf="@+id/no_id"
                    android:layout_marginBottom="5dp"
                    android:background="@color/material_light_white"
                    android:hint="@string/hint_verif"
                    android:inputType="phone" />

            </LinearLayout>

            <View
                android:background="@color/view_line"
                android:layout_width="fill_parent"
                android:layout_height="0.5dip" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip">


                <Button
                    android:id="@+id/verifi"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/phone"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:background="@drawable/rounded_corners_button"
                    android:text="@string/verif_no" />


                <EditText
                    android:id="@+id/setVertifi"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignBottom="@+id/verifi"
                    android:layout_toStartOf="@+id/verifi"
                    android:background="@color/material_light_white"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/hint_telp"
                    android:inputType="number"
                    android:maxLength="6" />

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners_button"
            android:gravity="center"
            android:text="@string/kirim_no"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/rounded_corners_button"
            android:text="@string/kirim_ulang" />
    </LinearLayout>

</LinearLayout>